sysyruntimelibrary-master/functional_test/18_cal_prio.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/18_cal_prio.sy:5:13: error: syntax error, unexpected R_PARENTHESIS
5| 	a = getint()
 |              ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/18_cal_prio.sy:0:0: error: not find main function
